# rs-macro-examples

./: Cargo.toml  README.md
builder-code/: Cargo.toml
builder-code/src/: fields.rs  lib.rs  utils.rs
builder-macro/src/: lib.rs
builder-usage/: Cargo.toml
builder-usage/src/: main.rs
builder-usage/tests/fails/: default_no_trait.rs  default_no_trait.stderr  missing_prop.rs  missing_prop.stderr  unamed_struct.rs  unamed_struct.stderr
config-macro/: Cargo.toml  README.md
config-macro-usage/: Cargo.toml
config-macro-usage/src/: main.rs
config-macro/src/: input.rs  lib.rs  output.rs
configuration/: config.yaml
function-like-compose-macro/: Cargo.toml
function-like-compose-macro/src/: lib.rs
hello-world-macro/: Cargo.toml
hello-world-macro/src/: lib.rs
iac-macro/: Cargo.toml
iac-macro-usage/: Cargo.toml
iac-macro-usage/src/: main.rs
iac-macro-usage/tests/fails/: bucket_and_no_lambda_name.rs  bucket_and_no_lambda_name.stderr  lambda_negative_time.rs  lambda_negative_time.stderr  lambda_time_not_a_number.rs  lambda_time_not_a_number.stderr
iac-macro/src/: lib.rs
make-public-macro/: Cargo.toml
make-public-macro/src/: lib.rs
other-attributes-macro/: Cargo.toml
other-attributes-macro/src/: lib.rs
panic-to-result-macro/: Cargo.toml
panic-to-result-macro/src/: lib.rs
panic-to-result-usage/: Cargo.toml
panic-to-result-usage/src/: main.rs
private-macro/: Cargo.toml
private-macro/src/: lib.rs
src/: greeting.rs  main.rs
upper-case-macro/: Cargo.toml
upper-case-macro/src/: lib.rs
