[package]
name = "config-macro-usage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config-macro = { path = "../config-macro", features = ["struct", "from"] }

[dev-dependencies]
trybuild = "1.0.85"